--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Web App</title>
+        <title>Tankiality</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -17,12 +17,55 @@
        <meta name="apple-mobile-web-app-title" content="">
        <meta name="apple-mobile-web-app-capable" content="yes">
        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+       <!--Fonts-->
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+   
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+
+<!--Background image-->
+    <html lang="en">
+        <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Image Placement</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+        <div class="container">
+        <img src="Tanki.png" alt="Your Image">
+    </div>
+    </html>
         
+<!--Start button-->
+        <html lang="en">
+        <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Customizable Button</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+        <button class="custom-button">Information</button>
+    </html>
+
+
+<!--Text-->
+<section class="container">
+    <!-- UPDATE THIS -->
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+      et justo sed tellus auctor vehicula. Mauris molestie hendrerit
+      accumsan.
+    </p>
+    <p>
+      Vivamus ligula enim, hendrerit vitae sodales id, molestie quis lorem.
+      Morbi viverra vel eros cursus iaculis. Morbi eleifend nisi sit amet
+      laoreet congue.
+    </p>
+  </section>
+
         <script src="script.js" async defer></script>
     </body>
 </html>
