--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         <button class="custom-button">Information</button>
         </a>
 
+        <!--Words under title-->
+        <div class="words">
+        <h2>For tanks on the big three</h2>
+        </div>
 
 
         <script src="script.js" async defer></script>
