--- a/selection.html
+++ b/selection.html
@@ -28,11 +28,14 @@
     </head>
     <body>
 
-        
+        <!--Selection images-->
+        <div class="container2">
+        <img src="American flag.png" alt="Your Image">
+        </div>
 
-
-
-
+        <div class="container2">
+        <img src="Russian flag.png" alt="Your Image">
+        </div>
 
 
 
